frontend/app/css/detail.css
/**
 *  Movie detail styles.
 *
 *  @author Nikola Klaric (nikola@generic.company)
 *  @copyright Copyright (c) 2013-2014 Nikola Klaric
 */

#boom-movie-detail {
    display: block;

    width: 1920px; height: 1080px;

    position: absolute; top: 0; left: 1920px;

    background-size: 1920px 1080px;
    /* background-position-x: -20px; */
    background-repeat: no-repeat;
    background-color: black;

    -webkit-transform: translate3d(0, 0, 0);
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
    -webkit-transform-style: preserve-3d;
    }

#boom-movie-detail-head {
    display: none;

    width: 2080px; height: 245px;
    position: absolute; top: 1080px; left: -160px;
    background-color: rgba(0, 0, 0, 0.25);

    -webkit-transform: translate3d(0, 0, 0);
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
    -webkit-transform-style: preserve-3d;
    }

#boom-movie-detail-poster-browser {
    display: inline-block;
    height: 245px;
    }

#boom-movie-detail-poster-browser img {
    margin: 10px 0 0 10px;
    }

#boom-movie-detail-browser-info {
    display: inline-block;
    width: 1090px; height: 225px;
    float: right;
    padding-top: 20px;
    /* background-color: rgba(0, 0, 0, 0.5); */
    }

#boom-movie-detail-browser-title {
    display: inline-block;
    line-height: 50px;
    font-size: 40px;

    width: 1060px;

    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
    }

#boom-movie-detail-browser-collection {
    display: inline-block;
    font-size: 25px;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
    padding-top: 10px;
    }

#boom-movie-detail-browser-additional {
    list-style: none;
    margin: 0;
    padding: 0;

    position: absolute;
    bottom: 30px;

    font-size: 30px;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
    }

#boom-movie-detail-browser-additional li {
    display: inline-block;
    margin-right: 30px;
    }

#boom-movie-detail-browser-focus {
    display: block;
    position: absolute; top: 1083px; left: 3px;
    width: 156px; height: 231px;
    border: 4px solid white;
    }

#boom-movie-detail-shade {
    width: 1520px; height: 1080px;
    background-color: black; opacity: 0;
    margin: 0 0 0 360px;
    z-index: 0;
    }

#boom-movie-detail-left {
    z-index: 1000;
    position: absolute;

    background-color: rgba(0, 0, 0, 0.5);
    height: 1080px;
    width: 360px;
    }

#boom-movie-detail-top {
    margin: 30px 0 0 30px;
    height: 720px;
    }

#boom-movie-detail-top img {
    display: block;
    min-width: 300px; max-width: 300px;
    min-height: 450px; max-height: 450px;
    width: auto;
    height: auto;

    /* -webkit-filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.5)); */
    /* -webkit-box-shadow: 0px 5px 25px 10px rgba(0, 0, 0, 0.5); */
    -webkit-box-shadow: 0px 2px 30px 4px rgba(0, 0, 0, 0.5);
    -webkit-transform: translate3d(0, 0, 0);

    /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
    }

#boom-movie-detail-bottom {
    margin: 0 0 30px 30px;
    height: 320px;
    padding-top: 180px;
    }

.boom-detail-info {
    color: white;

    /* margin: 30px 0 0 0; */
    width: 300px;
    height: 45px;

    font-size: 26px;
    /* line-height: 30px; */
    letter-spacing: 1px;
    }

#boom-movie-detail-right {
    z-index: 1000;
    position: absolute;

    margin-left: 1920px;
    /* width: 1530px; */
    }

#boom-movie-detail-title {
    height: 40px;
    font: 30px/35px Ka Boom;
    /* text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.75); */
    -webkit-transform-origin: 0 0;
    -webkit-transform: rotate(90deg);
    width: 1080px;
    padding-left: 30px;
    padding-right: 30px;
    background-color: black;
    overflow: hidden;
    }
    /* -webkit-text-stroke: 0.75px rgba(0, 0, 0, 0.25); */


#boom-movie-detail-description {
    display: none;

    position: absolute; left: 360px; top: 0;

    font-size: 40px;
    line-height: 60px;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
    width: 1472px; height: 1080px;
    font-weight: bold;
    padding: 18px 0 0 24px;

    flex-direction: column;
    justify-content: center;
    }

#boom-movie-trailer {
    pointer-events: none !important;
    cursor: none !important;
    width: 1920px;
    height: 1080px;
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    }

#boom-playback-wait {
    display: none;

    position: absolute;
    top: 0; left: 0;
    justify-content: center; flex-direction: column;
    width: 1920px; height: 1080px;
    text-align: center;
    font-size: 32px; font-style: italic;
    background-color: black;
    }

#boom-movie-detail-poster-fade-in {
    width: 1920; height: 1080px;
    position: absolute; left: 0; top: 0;
    display: none;
    -webkit-transform: translate3d(0, 0, 0);
    }

